add statictics info and fix swagger
